# minimal-fastapi

./: Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  pyproject.toml
.github/workflows/: docker-image.yml
minimal_fastapi/: main.py
tests/: conftest.py  populate.py
