[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "minimal-fastapi"
version = "0.1.0"
description = "Minimal Poetry example with Docker Multi-Stage builds"
authors = ["Chicao Fernandes <mail@chicao.io>"]
maintainers = ["chicao <mail@chicao.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.112.0"
gunicorn = "^22.0.0"
uvicorn = "^0.30.5"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.2"
pytest-mock = "*"

[tool.poetry.group.test.dependencies]
requests = "^2.32.3"
httpx = "^0.27.0"
